@@ -39,7 +39,6 @@ rule Library
   Always $(<)clean ;
   NotFile $(<)clean ;
   Clean $(<)clean : $(objects) ; # create target clean rule 
-  Depends clean : $(<)clean ;
 
   # so 'jam foo' works when it's really foo.exe (Windows) or foo.app (MacOS/X)
   if $(target) != $(<)
@@ -101,6 +100,7 @@ rule Library
 
   Archive $(target) : $(objects) ;
   Clean $(<)clean : $(target) ;
+  Depends clean : $(<)clean ;
 
   if $(CMD.RANLIB) { Ranlib $(target) ; }
 
